--- a/Anchor.toml
+++ b/Anchor.toml
@@ -13,3 +13,7 @@ test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
 [provider]
 cluster = "https://api.testnet.solana.com"
 wallet = "~/.config/solana/id.json"
+
+[toolchain]
+anchor_version = "0.30.1"
+
